src/scss/components/atoms/_range.scss
@use '../../theme/theme' as theme;

.range {
	display: flex;
	flex-direction: column;
	gap: 5px;

	// .range__label
	&__label {
		@include theme.text-style-helper(t2);

		display: flex;
		flex-flow: row nowrap;
		gap: 10px;
		align-items: center;
		justify-content: space-between;
		font-weight: 600;
	}

	// .range__percent
	&__percent {
		flex-shrink: 0;
	}

	// .range__input
	&__input {
		width: 100%;
		appearance: none;
		cursor: pointer;
		background: transparent;


		&::-webkit-slider-runnable-track {
			width: 100%;
			height: 6px;
			appearance: none;
			background: var(--colors-background-light-gray);
			border: 1px solid var(--colors-background-white);
			border-radius: var(--radius-4);
		}

		&::-moz-range-track {
			width: 100%;
			height: 6px;
			appearance: none;
			background: var(--colors-background-light-gray);
			border: 1px solid var(--colors-background-white);
			border-radius: var(--radius-4);
		}

		&::-webkit-slider-thumb {
			position: relative;
			top: -10px;
			width: 24px;
			height: 24px;
			appearance: none;
			background: var(--colors-background-blue);
			border: 3px solid var(--colors-background-deep-blue);
			border-radius: var(--radius-50percent);
		}

		&::-moz-range-thumb {
			position: relative;
			top: -10px;
			width: 24px;
			height: 24px;
			appearance: none;
			background: var(--colors-background-blue);
			border: 3px solid var(--colors-background-deep-blue);
			border-radius: var(--radius-50percent);
		}
	}


}

